overflow fix

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
 
 body {
     background: #ffffffef;
-    overflow: hidden;
+    overflow: auto;
     display: block;
     justify-content: center;
     align-items: center;
@@ -145,8 +145,8 @@ p {
     width: 800px;
     border-collapse: collapse;
     background-color: #2e8e9b;
-    margin-left:auto;
-    margin-right: auto;
+    margin: 0 auto;
+    display: block;
 }
 
 .settings-table th, .settings-table td {
